Bug 691401 - spurious "cmm error : Corrupted memory profile" message
Summary: spurious "cmm error : Corrupted memory profile" message
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color (show other bugs)
Version: master
Hardware: PC All
: P2 blocker
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-20 03:22 UTC by Hin-Tak Leung
Modified: 2010-06-28 10:52 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hin-Tak Leung 2010-06-20 03:22:58 UTC
opening examples/annots.pdf with either windows build or linux build,

bin\gswin32c.exe examples/annots.pdf

give some spurious messages about corrupted memory profile:


-----------
...
Page 2
>>showpage, press <return> to continue<<

Page 3
  .\base\gsicc_littlecms.c:24: gscms_error(): cmm error : Corrupted memory profile
| .\psi\zicc.c:122: seticc(): installing the profile

>>showpage, press <return> to continue<<
Page 4
  .\base\gsicc_littlecms.c:24: gscms_error(): cmm error : Corrupted memory profile
| .\psi\zicc.c:122: seticc(): installing the profile
>>showpage, press <return> to continue<<

Page 5
  .\base\gsicc_littlecms.c:24: gscms_error(): cmm error : Corrupted memory profile
| .\psi\zicc.c:122: seticc(): installing the profile
>>showpage, press <return> to continue<<
...
--------------

The was first observed with the borland build but then I checked with the linux build and also all the older icc-enabled build I have, all have the same problem.

pre-merge icc r11301 and post-merge 11340 and current-ish head (11392) all shows the same symptom. The error message seems harmless, but sounds alarming. Probably should be suppressed somehow.
Comment 1 Michael Vrhel 2010-06-28 10:52:48 UTC
Fixed so that lcms error messages only occur with debug build.  rev 11438