Warnings of problems within lcms only occur now in debug mode.  Fix for Bug 691401

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11438 a1074d23-0009-0410-80fe-cf8c14f379e6